# oxylus

./: .pre-commit-config.yaml  README.rst  manage.py  pyproject.toml
assets/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.base.js  vite.config.base.ts
assets/@ox/auth/: package.json  vite.config.js
assets/@ox/contacts/: README.md  package.json  vite.config.js  vite.config.js.timestamp-1750342493507-d7ffbbf78e0488.mjs
assets/@ox/content/: package.json  vite.config.js
assets/@ox/core/: README.md  package.json  vite.config.js  vite.config.js.timestamp-1750342493518-e68698b1d78488.mjs
assets/@ox/files/: package.json  vite.config.js
assets/@ox/locations/: package.json  vite.config.js
assets/@ox/mails/: package.json  vite.config.js  vite.config.js.timestamp-1750342493524-5429853343e5e8.mjs
assets/@ox/tasks/: package.json  vite.config.js  vite.config.js.timestamp-1750342493642-f12df5fbf1c538.mjs
assets/ox/: package.json  tsconfig.json  vite.config.js
assets/ox/docs/: hierarchy.html  index.html  modules.html
assets/ox/src/: app.ts  config.js  config.ts  lib.js  lib.ts  (+2 more)
assets/ox_auth/: package.json  vite.config.js
assets/ox_contacts/: package.json  tsconfig.json  vite.config.js
assets/ox_core/: package.json  vite.config.js
data/contacts/: organisationtype.yaml
data/locations/: currencies.yaml
docs/source/: conf.py  guide.rst  index.rst  todo.rst
ox/: README.md  asgi.py  urls.py  wsgi.py
ox/core/: README.md  apps.py  assets.py  conf.py  exceptions.py  middleware.py  models.py  pagination.py  renderers.py  signals.py  urls.py
ox/settings/: base.py  dev.py  prod.py  test.py
ox/utils/: apps.py  functional.py  logs.py  models.py  options.py  register.py  serializers.py  tests.py
tests/: conftest.py  test_router.py
tests/app/: apps.py  models.py
tests/core/: test_conf.py  test_exceptions.py  test_models.py  test_renderers.py  test_signals.py  test_templatetags_ox.py  test_views_nav.py
tests/files/: test_models.py
tests/utils/: test_apps.py  test_fields.py  test_functional.py  test_models_save_hook.py  test_models_tree.py
(+720 files in other folders)
